# trpg-engine

./: CMakeLists.txt  CMakePresets.json  PLAN.md  TODO.md  dOB  todo.txt  vcpkg.json
.clinerules/: instructions.md
.github/: copilot-instructions.md
cmake/: TRPGEngineConfig.cmake.in
cmake/toolchains/: trpg-vcpkg-toolchain.cmake
include/engine/assets/: FileWatcher.h  HotReloadBus.h
include/engine/core/: App.h  Log.h  Timer.h  Window.h
include/engine/data/: PropertyId.h  PropertyRegistry.h  TileClass.h  TileMapData.h  TiledJsonLoader.h
include/engine/effects/: ScreenTransition.h
include/engine/input/: GamepadCode.h  Input.h  KeyCode.h
include/engine/math/: Rect.h
include/engine/renderer/: Camera.h  Color.h  DebugRenderer.h  Font.h  FontManager.h  Renderer.h  SpriteBatch.h  Texture.h
include/engine/scene/: Scene.h
include/engine/statemachine/: StateMachine.h
include/engine/ui/: Button.h  ButtonControl.h  FocusGroup.h  HorizontalLayout.h  IFocusable.h  IRowControl.h  Insets.h  MenuPanel.h  Slider.h  SliderControl.h  TextLabel.h  UIAnimation.h  ValueControl.h  VerticalLayout.h
include/engine/world/: WorldGraph.h  WorldPathfinding.h
install/include/engine/core/: App.h  Log.h
install/include/engine/data/: TileMapData.h  TiledJsonLoader.h
install/include/engine/input/: Input.h  KeyCode.h
install/include/engine/math/: MathUtils.h  Vec2.h
install/include/engine/renderer/: DebugRenderer.h  Texture.h  TileLayer.h
install/include/engine/scene/: SceneStack.h
install/include/engine/statemachine/: IState.h  StateMachine.h
install/include/engine/ui/: FocusGroup.h  IFocusable.h  MenuPanel.h
install/lib/cmake/TRPGEngine/: TRPGEngineConfig.cmake  TRPGEngineTargets-debug.cmake  TRPGEngineTargets.cmake
src/engine/assets/: FileWatcher.cpp  HotReloadBus.cpp
src/engine/core/: App.cpp  Log.cpp  Timer.cpp  Window.cpp
src/engine/data/: TileMapData.cpp  TiledJsonLoader.cpp
src/engine/effects/: ScreenTransition.cpp
src/engine/input/: Input.cpp
src/engine/renderer/: Camera.cpp  DebugRenderer.cpp  Font.cpp  FontManager.cpp  Renderer.cpp  SpriteBatch.cpp  Texture.cpp  TileLayer.cpp
src/engine/ui/: Button.cpp  ButtonControl.cpp  MenuPanel.cpp  Slider.cpp  SliderControl.cpp  TextLabel.cpp  ValueControl.cpp
tools/: build_debug.bat  build_release.bat  check_public_headers.py  vsenv.bat
